xee-xpath-ast/src/parser/snapshots/xee_xpath_ast__parser__tests__leading_lone_slash_can_form_a_path_expression.snap
---
source: xee-xpath-ast/src/parser/mod.rs
expression: "parse_xpath_simple(\"/ *\")"
---
Ok(XPath(Expr([
  Path(PathExpr(
    steps: [
      PrimaryExpr(FunctionCall(FunctionCall(
        name: Name(
          name: "root",
          prefix: None,
          namespace: Some("http://www.w3.org/2005/xpath-functions"),
        ),
        arguments: [
          Path(PathExpr(
            steps: [
              AxisStep(AxisStep(
                axis: Self_,
                node_test: KindTest(Any),
                predicates: [],
              )),
            ],
          )),
        ],
      ))),
      AxisStep(AxisStep(
        axis: Child,
        node_test: NameTest(Star),
        predicates: [],
      )),
    ],
  )),
])))
