xee-xpath-ast/src/parser/snapshots/xee_xpath_ast__parser__tests__leading_lone_slash_can_form_a_path_expression_error.snap
---
source: xee-xpath-ast/src/parser/mod.rs
expression: "parse_xpath_simple(\"/ * 5\")"
---
Err("[found \'IntegerLiteral(5)\' at 4..5 expected \'LeftBracket\', \'Slash\', \'DoubleSlash\', \'ExclamationMark\', \'Cast\', \'Castable\', \'Treat\', \'Instance\', \'Intersect\', \'Except\', \'Pipe\', \'Union\', \'Asterisk\', \'Div\', \'Idiv\', \'Mod\', \'Plus\', \'Minus\', \'To\', \'DoublePipe\', \'Equal\', \'NotEqual\', \'LessThan\', \'LessThanEqual\', \'GreaterThan\', \'GreaterThanEqual\', \'Eq\', \'Ne\', \'Lt\', \'Le\', \'Gt\', \'Ge\', \'Is\', \'Precedes\', \'Follows\', \'And\', \'Or\', or \'Comma\']")
