xee-xpath-ast/src/parser/snapshots/xee_xpath_ast__parser__tests__leading_lone_slash_disambiguate.snap
---
source: xee-xpath-ast/src/parser/mod.rs
expression: "parse_xpath_simple(\"(/) * 5\")"
---
Ok(XPath(Expr([
  Path(PathExpr(
    steps: [
      PrimaryExpr(Expr(Some(Expr([
        Binary(BinaryExpr(
          operator: Mul,
          left: PathExpr(
            steps: [
              PrimaryExpr(Expr(Some(Expr([
                Path(PathExpr(
                  steps: [
                    PrimaryExpr(FunctionCall(FunctionCall(
                      name: Name(
                        name: "root",
                        prefix: None,
                        namespace: Some("http://www.w3.org/2005/xpath-functions"),
                      ),
                      arguments: [
                        Path(PathExpr(
                          steps: [
                            AxisStep(AxisStep(
                              axis: Self_,
                              node_test: KindTest(Any),
                              predicates: [],
                            )),
                          ],
                        )),
                      ],
                    ))),
                  ],
                )),
              ])))),
            ],
          ),
          right: PathExpr(
            steps: [
              PrimaryExpr(Literal(Integer((Positive, [
                5,
              ])))),
            ],
          ),
        )),
      ])))),
    ],
  )),
])))
