xee-xpath-ast/src/parser/snapshots/xee_xpath_ast__parser__tests__named_function_ref.snap
---
source: xee-xpath-ast/src/parser/mod.rs
expression: "ast::ExprSingle::parse(\"my_function#2\")"
---
Ok(Path(PathExpr(
  steps: [
    PrimaryExpr(NamedFunctionRef(NamedFunctionRef(
      name: Name(
        name: "my_function",
        prefix: None,
        namespace: Some("http://www.w3.org/2005/xpath-functions"),
      ),
      arity: 2,
    ))),
  ],
)))
