xee-xpath-ast/src/parser/snapshots/xee_xpath_ast__parser__tests__namespace_node_default_axis.snap
---
source: xee-xpath-ast/src/parser/mod.rs
expression: "ast::ExprSingle::parse(\"foo/namespace-node()\")"
---
Ok(Path(PathExpr(
  steps: [
    AxisStep(AxisStep(
      axis: Child,
      node_test: NameTest(Name(Name(
        name: "foo",
        prefix: None,
        namespace: None,
      ))),
      predicates: [],
    )),
    AxisStep(AxisStep(
      axis: Namespace,
      node_test: KindTest(NamespaceNode),
      predicates: [],
    )),
  ],
)))
