xee-xpath-ast/src/parser/snapshots/xee_xpath_ast__parser__tests__nested_let_expr.snap
---
source: xee-xpath-ast/src/parser/mod.rs
expression: "ast::ExprSingle::parse(\"let $x := 1, $y := 2 return 5\")"
---
Ok(Let(LetExpr(
  var_name: Name(
    name: "x",
    prefix: None,
    namespace: None,
  ),
  var_expr: Path(PathExpr(
    steps: [
      PrimaryExpr(Literal(Integer((Positive, [
        1,
      ])))),
    ],
  )),
  return_expr: Let(LetExpr(
    var_name: Name(
      name: "y",
      prefix: None,
      namespace: None,
    ),
    var_expr: Path(PathExpr(
      steps: [
        PrimaryExpr(Literal(Integer((Positive, [
          2,
        ])))),
      ],
    )),
    return_expr: Path(PathExpr(
      steps: [
        PrimaryExpr(Literal(Integer((Positive, [
          5,
        ])))),
      ],
    )),
  )),
)))
