xee-xpath-ast/src/parser/snapshots/xee_xpath_ast__parser__tests__prefixed_name.snap
---
source: xee-xpath-ast/src/parser/mod.rs
expression: "ast::Name::parse(\"xs:foo\")"
---
Ok(Name(
  name: "foo",
  prefix: Some("xs"),
  namespace: Some("http://www.w3.org/2001/XMLSchema"),
))
