xee-xpath-ast/src/parser/snapshots/xee_xpath_ast__parser__tests__qualified_name.snap
---
source: xee-xpath-ast/src/parser/mod.rs
expression: "ast::Name::parse(\"Q{http://example.com}foo\")"
---
Ok(Name(
  name: "foo",
  prefix: None,
  namespace: Some("http://example.com"),
))
